Fix href link in partnership banner
Updated the href link in the partnership banner section.

--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
     <style>
         :root {
             /* Palette */
-            --bg-body: #F8FAFC;         
+            --bg-body: #F8FAFC;          
             --bg-surface: rgba(255, 255, 255, 0.85);
-            --primary: #0F766E;         
+            --primary: #0F766E;          
             --primary-dark: #0D5E57;
             --primary-light: #CCFBF1;
-            --accent: #6366F1;         
+            --accent: #6366F1;          
             --accent-glow: rgba(99, 102, 241, 0.3);
             --text-main: #1E293B;
             --text-muted: #64748B;
@@ -475,7 +475,8 @@
 
     <!-- PARTNERSHIP BANNER (New) -->
     <section class="container" style="margin-top: 40px; margin-bottom: 20px;">
-        <a href="partnerstwo.html" class="partnership-banner cursor-trigger">
+        <!-- FIX: Updated href link to ncni_partnerstwo.html -->
+        <a href="ncni_partnerstwo.html" class="partnership-banner cursor-trigger">
             <div class="partnership-content">
                 <span class="partnership-tag">Strefa B2B</span>
                 <h2>Partnerstwo Strategiczne: Nauka & Biznes</h2>
